<resources>
    <string name="app_name">MOV APPS</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_deskripsi">Lebih mudah untuk mengetahui \n film yang sedang tampil</string>
    <string name="presale">Pre Sale</string>
    <string name="presale_deskripsi">Tidak khawatir ketinggalan \n update film terbaru</string>
    <string name="cahsless">Cashless</string>
    <string name="cashless_deskripsi">Gunakan e-wallet untuk \n transaksi tiket nonton</string>
    <string name="memulai">Memulai</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="ilhamamka">ilhamamka</string>
    <string name="password">Password</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="akun_baru">Daftar Akun Baru</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="welcome">Welcome,\n Ilham Amka</string>
    <string name="photo">Photo</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="simpan_dan_lanjutkan"><![CDATA[Simpan & Lanjutkan]]></string>
    <string name="coming_soon">Coming Soon</string>
    <string name="Avengers">Avengers: Infinity War</string>
    <string name="Action">Action, Sci-fi, Kids</string>
    <string name="storyboard">Storyboard</string>
    <string name="storyboard_desc">The Avengers must stop Thanos, a mad Titan, and his  army from getting their hands on all the infinity stones.  However, the mad Titan is prepared to go to any lengths  to carry out his insane plan.</string>
    <string name="whoplay">Who\'s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_depan">Layar Depan</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="empty">Empty</string>
    <string name="Booked">Booked</string>
    <string name="selected">Selected</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="data_time"><![CDATA[Date & Time]]></string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="ewallet">E-Wallet</string>
    <string name="simpandatabaru">Simpan Data Baru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="mywallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftartransaksi">Daftar Transaksi</string>
    <string name="my_history">My History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="datetime">datetime</string>
    <string name="totalbalance">totalbalance</string>
    <string name="home">home</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="happy_watch">Happy Watching</string>
    <string name="todo">TODO</string>
    <string name="_7">7</string>
    <string name="todays">Todays</string>
    <string name="_200_movie">200 Movie</string>
    <string name="settings">Settings</string>
    <string name="keep_it_up_to_date">Keep it up to date</string>
    <string name="ilham_amka">Ilham Amka</string>
    <string name="bwa_gmail_com">bwa@gmail.com</string>
</resources>
